# fuzzer-correctness-on-clang

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  analyze.py  c.fan  c.json  clang.diff  coverage.c  run.sh  run_in_screen.sh
report/: .gitignore  bush.acorn  index.tex  sources.bib
src/: executor.rs  feedback.rs  main.rs  observer.rs
src/config/: fandango.rs  mod.rs  nautilus.rs  seeds.rs
src/get_guard_num/: Cargo.toml
src/get_guard_num/src/: lib.rs
src/setup_guard_redirection/: Cargo.toml
src/setup_guard_redirection/src/: lib.rs
valid_corpus/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
