[workspace]
members = ["src/get_guard_num", "src/setup_guard_redirection"]

[package]
name = "fuzzer_correctness_on_clang"
version = "0.2.0"
authors = ["Valentin Huber <contact@valentinhuber.me>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.release]
# lto = true
# codegen-units = 1
# opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
which = { version = "4.4" }
num_cpus = "1.17"

[dependencies]
libafl = { version = "0.15.4", features = ["default", "nautilus"] }
libafl_bolts = "0.15.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# TODO Include it only when building cc
libafl-fandango-pyo3 = "0.3.0"
clap = { version = "4.5", features = ["derive"] }

# [lib]
# name = "libafl_nautilus_fuzzer"
# crate-type = ["staticlib"]

# [patch.crates-io]
# # Patch libafl to use the git version so all dependencies use the same version
# libafl = { git = "https://github.com/aflplusplus/libafl.git" }
# libafl_bolts = { git = "https://github.com/aflplusplus/libafl.git" }
