[package]
name = "setup_guard_redirection"
version = "0.1.0"
authors = ["Valentin Huber <contact@valentinhuber.me"]
edition = "2021"
license = "MIT"

[lib]
name = "setup_guard_redirection"
crate-type = ["cdylib"]

[dependencies]
libafl_targets = { version = "0.15.4", features = ["sancov_pcguard_edges"] }
libafl_bolts = { version = "0.15.4" }
libc = "0.2"
serde_json = "1.0.146"
